force-app/main/default/objects/Custom_Object_Mapping__c/Custom_Object_Mapping__c.object-meta.xml
<CustomObject>
    <label>Custom Object Mapping</label>
    <pluralLabel>Custom Object Mappings</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>