force-app/main/default/objects/Custom_Object_Mapping__c/fields/Enforce_Path_Order__c.field-meta.xml
<CustomField>
    <fullName>Enforce_Path_Order__c</fullName>
    <label>Enforce Path Order</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>