force-app/main/default/objects/Custom_Object_Mapping__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>