force-app/main/default/objects/Custom_Object_Mapping__c/fields/Page_Layout_ID__c.field-meta.xml
<CustomField>
    <fullName>Page_Layout_ID__c</fullName>
    <label>Page Layout ID</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>