force-app/main/default/objects/Custom_Object_Mapping__c/fields/Page_Layout_Name__c.field-meta.xml
<CustomField>
    <fullName>Page_Layout_Name__c</fullName>
    <label>Page Layout Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>