force-app/main/default/objects/Custom_Object_Mapping__c/fields/Stage_Order_Source__c.field-meta.xml
<CustomField>
    <fullName>Stage_Order_Source__c</fullName>
    <label>Stage Order Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Order</fullName>
            </value>
            <value>
                <fullName>Picklist Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>