force-app/main/default/objects/Custom_Object_Mapping__c/fields/Stage_Picklist_Field__c.field-meta.xml
<CustomField>
    <fullName>Stage_Picklist_Field__c</fullName>
    <label>Stage Picklist Field</label>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText>API name of the picklist field driving stages</inlineHelpText>
</CustomField>